GitHub refactor